# sdsdg-lib

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  test.py
SDSDG_Lib/: mkdocs.yml  pyproject.toml
SDSDG_Lib/api/: database.py
api/: .readthedocs.yaml  mkdocs.yml  pyproject.toml  pytest.ini  test.py
api/SDSDG_Lib/: __init__.py  data_handler.py  database.py  generators.py
api/docs/: index.md
api/docs/Documentação/: database.md
api/tests/: test_database.py
app/: pyproject.toml
app/.streamlit/: config.toml
sdsdg_lib/: __init__.py  database.py  generators.py
tests/: test_database.py
