[tool.poetry]
name = "sdsdg-app"
version = "0.1.0"
description = ""
authors = ["Bruno-Gomes-QA <bruno.gomes.qa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
